--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Your First and Last Name]</h1>
-            <h1>Preferred Name: [Your Preferred Name]</h1>
+            <h1>Nicholas Stanislaus</h1>
+           Nicholas
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: [Your Years at Lewis]</h2>
-			<h2>Lewis major/minor/concentrations: [Your major/minor/concentrations]</h2>
-			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
+			<h2>Year at Lewis: 2
+			<h2>Lewis major/minor/concentrations: Accounting and minor in computer science</h2>
+			<h2>Reasons for pursuing this degree: To be financially stable in the future and be able to operate my own business without having to hire to many experts</h2>
         </section>
 
 		<section class="course">
