Update Nicholas Stanislaus

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
         </section>
 
 		<section class="course">
-            <h2>Reasons for Taking This Course</h2>
-            <p>[Your reasons for taking this course]</p>
+            <h2>Reasons for Taking this course</h2>
+            <p>My reason for taking this course is to become more experienced in technology so i can do tech service for my business in the future</p>
         </section>
 
 		<section class="job">
-            <p>Current/Recent Job</p>
-			<p>[Your job responsibilities]</p>
+            <p>Schools library assistant</p>
+			<p>Is to aid students or visitors with any assistance they may need that the library assists with such as finding books or schedule a study room</p>
         </section>		
 
         <section class="hobbies">
-            <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
+            <h2>Hobbies and Special Interes</h2>
+            <p>My special hobbies are traveling and doing stuff outdoors i am also into track and field so i love competing</p>
         </section>
 
         <section class="fun-fact">
             <h2>Fun Fact</h2>
-            <p>[A fun fact about yourself]</p>
+            <p>fun fact about myself is that i traveled 10 different countries in a two month period across europe</p>
         </section>
     </div>
 </body>
